gtk3: Fix clipping of icons in the mate panel window list
Remove the padding on the top and bottom of tasklist buttons to avoid the
bottoms fo icons being clipped off at 24px sizes.

--- a/src/gtk-3.0/3.18/gtk-dark.css
+++ b/src/gtk-3.0/3.18/gtk-dark.css
@@ -3128,7 +3128,9 @@ SynapseGuiViewVirgilio *:selected {
     color: #DADADA;
     background-color: #292929;
     border-radius: 0;
-    border: none; }
+    border: none;
+    padding-bottom: 0;
+    padding-top: 0; }
     .gnome-panel-menu-bar #tasklist-button:hover,
     .mate-panel-menu-bar #tasklist-button:hover {
       background-color: #363636; }
